--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 </div>
 
                 <div class="profile-card__links">
-                    <a href="#">GitHub</a>
-                    <a href="#">Frontend Mentor</a>
-                    <a href="#">LinkedIn</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Instagram</a>
+                    <a href="https://github.com/">GitHub</a>
+                    <a href="https://frontendmentor.io/">Frontend Mentor</a>
+                    <a href="https://www.linkedin.com/">LinkedIn</a>
+                    <a href="https://x.com/">Twitter</a>
+                    <a href="https://www.instagram.com/">Instagram</a>
                 </div>
             </div>
         </main>
