add arial-label for links

--- a/index.html
+++ b/index.html
@@ -30,11 +30,31 @@
                 </div>
 
                 <div class="profile-card__links">
-                    <a href="https://github.com/">GitHub</a>
-                    <a href="https://frontendmentor.io/">Frontend Mentor</a>
-                    <a href="https://www.linkedin.com/">LinkedIn</a>
-                    <a href="https://x.com/">Twitter</a>
-                    <a href="https://www.instagram.com/">Instagram</a>
+                    <a
+                        href="https://github.com/"
+                        aria-label="This is a link to Github page"
+                        >GitHub</a
+                    >
+                    <a
+                        href="https://frontendmentor.io/"
+                        aria-label="This is a link to Frontend mentor page"
+                        >Frontend Mentor</a
+                    >
+                    <a
+                        href="https://www.linkedin.com/"
+                        aria-label="This is a link to LinkedIn page"
+                        >LinkedIn</a
+                    >
+                    <a
+                        href="https://x.com/"
+                        aria-label="This is a link to Twitter page"
+                        >Twitter</a
+                    >
+                    <a
+                        href="https://www.instagram.com/"
+                        aria-label="This is a link to Instagram page"
+                        >Instagram</a
+                    >
                 </div>
             </div>
         </main>
